32.7.3 (15-02-2021)
- Bug fix: Fixed bug in access control validation

32.7.2 (12-02-2021)
- Improvement: Improved performance checking access with PermissionService

32.7.1 (08-02-2021)
- Bug fix: Fixed performance issue validation object access with PermissionService

32.7.0 (07-02-2021)
- Refactor: Cleanup deprecated Qualification slots, EducationArea and Formation 

32.6.3 (21-01-2021)
- Bug Fix: Replaced reference to deprecated method in lessons management 

32.6.2 (18-01-2021)
- Bug Fix: Avoid NPE when returning allowd child party types of unit without type

32.6.1 (11-01-2021)
- Bug Fix: Error accessing concluded students list in coordinator portal  

32.6.0 (06-01-2021)
- Improvement: Make coordinator sender from name more consistent with execution course sender
- Improvement: Improvement academic permission service

32.5.0 (05-01-2021)
- Refactor: Refactored sub classes of Occupation 

32.4.0 (10-12-2020)
- Refactor: Add interfaces and methods to get treasury customer and debt account

32.3.2 (23-11-2020)
- Bug Fix: Set CurrentPartyContact to null when deleting party contact #UL-FM-1968

32.3.1 (23-11-2020)
- Bug fix: Error accessing coordinator portal due to removal of bolonha type in degree type

32.3.0 (19-11-2020)
- Improvement: Support multiple sub-units with same name under same parent
- Bug fix: Fix broken back navigation from professorship creation
- Refactor: Remove deprecated relation between administrative office and campus

32.2.0 (18-11-2020)
- Bug fix: Prevent exception in ordering campus when none exists yet
- Refactor: Remove deprecated slot bolonha from degree type

32.1.0 (13-11-2020)
- Refactor: Cleanup deprecated attends methods
- Refactor: Cleanup deprecated degree slots
- Refactor: Cleanup deprecated degree and coordinator methods

32.0.2 (11-11-2020)
- Bug fix: Fix the unnecessary PersistentGroup creation

32.0.1 (10-11-2020)
- Refactor: Add methods to ensure API retro-compability

32.0.0 (10-11-2020)