@@ -1,3 +1,5 @@
+- Improvement: Improved permission service to use object-profiles cache
+
 32.7.3 (15-02-2021)
 - Bug fix: Fixed bug in access control validation
 
